Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -698,9 +698,9 @@
   "pli-tv-kd13:19.1.33": "which it did. ",
   "pli-tv-kd13:19.1.34": "I then asked the Sangha to give me probation for that offense, simultaneous with the probation for the previous offense, ",
   "pli-tv-kd13:19.1.35": "which it did. ",
-  "pli-tv-kd13:19.1.36": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense, ",
-  "pli-tv-kd13:19.1.37": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:19.1.38": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:19.1.36": "When I had completed that probation, I asked the Sangha to give me the trial period of six days, ",
+  "pli-tv-kd13:19.1.37": "which it did. ",
+  "pli-tv-kd13:19.1.38": "I’ve now completed the trial period and ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:19.1.39": "And he should ask a second ",
   "pli-tv-kd13:19.1.40": "and a third time. ",
   "pli-tv-kd13:19.1.41": "A competent and capable monk should then inform the Sangha: ",
