--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -706,7 +706,7 @@
   "pli-tv-kd13:19.1.41": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:19.1.42": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:19.1.43": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:19.1.44": "He asked the Sangha for probation for a half-month for that offense, ",
+  "pli-tv-kd13:19.1.44": "He asked the Sangha to give him probation for a half-month for that offense, ",
   "pli-tv-kd13:19.1.45": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:19.1.46": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.47": "He asked the Sangha to send him back to the beginning for that offense, ",
