Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -707,12 +707,12 @@
   "pli-tv-kd13:19.1.42": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:19.1.43": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:19.1.44": "He asked the Sangha to give him probation for a half-month for that offense, ",
-  "pli-tv-kd13:19.1.45": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:19.1.46": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:19.1.45": "which it did. ",
+  "pli-tv-kd13:19.1.46": "While on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.47": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.48": "which it did. ",
   "pli-tv-kd13:19.1.49": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.50": "and the Sangha gave him that simultaneous probation. ",
+  "pli-tv-kd13:19.1.50": "which it did. ",
   "pli-tv-kd13:19.1.51": "When he had completed the probation, while deserving the trial period of six days, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.52": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.53": "which it did. ",
