Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -713,20 +713,20 @@
   "pli-tv-kd13:19.1.48": "which it did. ",
   "pli-tv-kd13:19.1.49": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
   "pli-tv-kd13:19.1.50": "which it did. ",
-  "pli-tv-kd13:19.1.51": "When he had completed the probation, while deserving the trial period of six days, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:19.1.51": "When he had completed that probation, while deserving the trial period of six days, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.52": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.53": "which it did. ",
   "pli-tv-kd13:19.1.54": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.55": "and the Sangha gave him that simultaneous probation. ",
-  "pli-tv-kd13:19.1.56": "When he had completed the probation, he asked the Sangha for the trial period of six days for the three offenses, ",
-  "pli-tv-kd13:19.1.57": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:19.1.55": "which it did. ",
+  "pli-tv-kd13:19.1.56": "When he had completed that probation, he asked the Sangha to give him the trial period of six days for the three offenses, ",
+  "pli-tv-kd13:19.1.57": "which it did. ",
   "pli-tv-kd13:19.1.58": "While he was undertaking the trial period, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.59": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.60": "which it did. ",
   "pli-tv-kd13:19.1.61": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.62": "and the Sangha gave him that simultaneous probation. ",
+  "pli-tv-kd13:19.1.62": "which it did. ",
   "pli-tv-kd13:19.1.63": "He then asked the Sangha to give him the trial period of six days for that offense, ",
-  "pli-tv-kd13:19.1.64": "and the Sangha gave him the trial period. ",
+  "pli-tv-kd13:19.1.64": "which it did. ",
   "pli-tv-kd13:19.1.65": "When he had completed the trial period, while deserving rehabilitation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.66": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.67": "which it did. ",
