Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -727,14 +727,14 @@
   "pli-tv-kd13:19.1.62": "which it did. ",
   "pli-tv-kd13:19.1.63": "He then asked the Sangha to give him the trial period of six days for that offense, ",
   "pli-tv-kd13:19.1.64": "which it did. ",
-  "pli-tv-kd13:19.1.65": "When he had completed the trial period, while deserving rehabilitation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:19.1.65": "When he had completed that trial period, while deserving rehabilitation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.66": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.67": "which it did. ",
   "pli-tv-kd13:19.1.68": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.69": "and the Sangha gave him that simultaneous probation. ",
-  "pli-tv-kd13:19.1.70": "When he had completed the probation, he asked the Sangha to give him the trial period of six days for that offense, ",
-  "pli-tv-kd13:19.1.71": "and the Sangha gave him the trial period. ",
-  "pli-tv-kd13:19.1.72": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:19.1.69": "which it did. ",
+  "pli-tv-kd13:19.1.70": "When he had completed that probation, he asked the Sangha to give him the trial period of six days, ",
+  "pli-tv-kd13:19.1.71": "which it did. ",
+  "pli-tv-kd13:19.1.72": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:19.1.73": "If it seems appropriate to the Sangha, the Sangha should rehabilitate him. ",
   "pli-tv-kd13:19.1.74": "This is the motion. ",
   "pli-tv-kd13:19.1.75": "‘Please, Venerables, I ask the Sangha to listen. ",
