--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -739,14 +739,14 @@
   "pli-tv-kd13:19.1.74": "This is the motion. ",
   "pli-tv-kd13:19.1.75": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:19.1.76": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. … ",
-  "pli-tv-kd13:19.1.77": "He’s now completed the trial period and is asking the Sangha for rehabilitation. ",
+  "pli-tv-kd13:19.1.77": "He’s now completed that trial period and is asking the Sangha for rehabilitation. ",
   "pli-tv-kd13:19.1.78": "The Sangha rehabilitates him. ",
   "pli-tv-kd13:19.1.79": "Any monk who approves of rehabilitating him should remain silent. ",
   "pli-tv-kd13:19.1.80": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:19.1.81": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:19.1.82": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:19.1.83": "The Sangha has rehabilitated the monk Udāyī. ",
-  "pli-tv-kd13:19.1.84": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:19.1.84": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:19.1.85": "The section on emission of semen is finished. ",
   "pli-tv-kd13:20.1.0.1": "2. Probation ",
   "pli-tv-kd13:20.1.0.2": "2.1 Simultaneous probations according to the longest duration ",
