Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -756,7 +756,7 @@
   "pli-tv-kd13:20.1.7": "adding, “What should I do now?” ",
   "pli-tv-kd13:20.1.8": "They told the Buddha. ",
   "pli-tv-kd13:20.1.9": "“Well then, the Sangha should give that monk simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
-  "pli-tv-kd13:20.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:20.2.1": "And it should be given like this. ",
   "pli-tv-kd13:20.2.2": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:20.2.3": "and say: ",
   "pli-tv-kd13:20.2.4": "‘Venerables, I’ve committed a number of offenses entailing suspension: ",
