Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -785,7 +785,7 @@
   "pli-tv-kd13:20.2.27": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:20.2.28": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:20.2.29": "The Sangha has given monk so-and-so simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
-  "pli-tv-kd13:20.2.30": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:20.2.30": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:21.1.0": "2.2 Simultaneous probations according to the longest duration, that is, for all the offenses that were concealed the longest ",
   "pli-tv-kd13:21.1.1": "At one time a monk had committed a number of offenses entailing suspension: ",
   "pli-tv-kd13:21.1.2": "one concealed for one day, two for two days, three for three days, four for four days, five for five days, six for six days, seven for seven days, eight for eight days, nine for nine days, ten for ten days. ",
