Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -793,7 +793,7 @@
   "pli-tv-kd13:21.1.6": "adding, “What should I do now?” ",
   "pli-tv-kd13:21.1.7": "They told the Buddha. ",
   "pli-tv-kd13:21.1.8": "“Well then, the Sangha should give that monk simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
-  "pli-tv-kd13:21.1.9": "And it should be given like this: ",
+  "pli-tv-kd13:21.1.9": "And it should be given like this. ",
   "pli-tv-kd13:21.1.10": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:21.1.11": "and say: ",
   "pli-tv-kd13:21.1.12": "‘Venerables, I’ve committed a number of offenses entailing suspension: one concealed for one day … ",
