--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -819,7 +819,7 @@
   "pli-tv-kd13:21.1.32": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:21.1.33": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:21.1.34": "The Sangha has given monk so-and-so simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
-  "pli-tv-kd13:21.1.35": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:21.1.35": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:22.1.0": "2.3 Probation for two months ",
   "pli-tv-kd13:22.1.1": "At one time a monk had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.1.2": "He thought, ",
