--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -827,7 +827,7 @@
   "pli-tv-kd13:22.1.4": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
   "pli-tv-kd13:22.1.5": "He did, ",
   "pli-tv-kd13:22.1.6": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:22.1.7": "While he was on probation, he was conscience-stricken. ",
+  "pli-tv-kd13:22.1.7": "While on probation, he was conscience-stricken. ",
   "pli-tv-kd13:22.1.8": "He considered what he had done, ",
   "pli-tv-kd13:22.1.15": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
   "pli-tv-kd13:22.2.1": "He told the monks everything that had happened, ",
