Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -879,7 +879,7 @@
   "pli-tv-kd13:22.4.41": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:22.4.42": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:22.4.43": "The Sangha has given monk so-and-so probation for two months for the other offense, concealed for two months. ",
-  "pli-tv-kd13:22.4.44": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd13:22.4.44": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:22.4.45": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.1.0": "2.4 Processes for staying on probation for two months ",
   "pli-tv-kd13:23.1.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
