--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -975,7 +975,7 @@
   "pli-tv-kd13:24.1.4": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.1.5": "He did, ",
   "pli-tv-kd13:24.1.6": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:24.1.7": "While he was on probation, he was conscience-stricken. ",
+  "pli-tv-kd13:24.1.7": "While on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.1.8": "He considered all this, ",
   "pli-tv-kd13:24.1.15": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.2.1": "He told the monks about everything, ",
