--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -982,7 +982,7 @@
   "pli-tv-kd13:24.2.17": "adding, ‘What should I do now?’ ",
   "pli-tv-kd13:24.2.18": "They told the Buddha. ",
   "pli-tv-kd13:24.3.1": "“Well then, the Sangha should give that monk probation for an additional month for those two offenses concealed for two months. ",
-  "pli-tv-kd13:24.3.2": "And it should be given like this: ",
+  "pli-tv-kd13:24.3.2": "And it should be given like this. ",
   "pli-tv-kd13:24.3.3": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:24.3.4": "and say: ",
   "pli-tv-kd13:24.3.5": "‘Venerables, I had committed two offenses entailing suspension, both concealed for two months. ",
