Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1005,7 +1005,7 @@
   "pli-tv-kd13:24.3.28": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.29": "He did, ",
   "pli-tv-kd13:24.3.30": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:24.3.31": "While he was on probation, he was conscience-stricken. ",
+  "pli-tv-kd13:24.3.31": "While on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.3.32": "He considered all this, ",
   "pli-tv-kd13:24.3.39": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.40": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
