Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1028,7 +1028,7 @@
   "pli-tv-kd13:24.3.63": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:24.3.64": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:24.3.65": "The Sangha has given monk so-and-so probation for an additional month for those two offenses, concealed for two months. ",
-  "pli-tv-kd13:24.3.66": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd13:24.3.66": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:24.3.67": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.1.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.1.2": "He thinks, ",
