--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1127,7 +1127,7 @@
   "pli-tv-kd13:26.1.11": "adding, “What should I do now?” ",
   "pli-tv-kd13:26.1.12": "They told the Buddha. ",
   "pli-tv-kd13:26.1.13": "“Well then, the Sangha should give that monk a purifying probation for those offenses. ",
-  "pli-tv-kd13:26.2.1": "And it should be given like this: ",
+  "pli-tv-kd13:26.2.1": "And it should be given like this. ",
   "pli-tv-kd13:26.2.2": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:26.2.3": "and say: ",
   "pli-tv-kd13:26.2.4": "‘Venerables, I’ve committed a number of offenses entailing suspension. ",
