--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1140,8 +1140,8 @@
   "pli-tv-kd13:26.2.11": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:26.2.12": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:26.2.13": "The monk so-and-so has committed a number of offenses entailing suspension. ",
-  "pli-tv-kd13:26.2.14": "He does not know the number of offenses or the number of days; ",
-  "pli-tv-kd13:26.2.15": "he does not remember the number of offenses or the number of days; ",
+  "pli-tv-kd13:26.2.14": "He doesn’t know the number of offenses or the number of days; ",
+  "pli-tv-kd13:26.2.15": "he doesn’t remember the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.16": "he’s unsure of the number of offenses and the number of days. ",
   "pli-tv-kd13:26.2.17": "He’s asking the Sangha for a purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.18": "If it seems appropriate to the Sangha, the Sangha should give him a purifying probation for those offenses. ",
