Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1158,7 +1158,7 @@
   "pli-tv-kd13:26.2.29": "For the second time I speak on this matter. … ",
   "pli-tv-kd13:26.2.30": "For the third time I speak on this matter. … ",
   "pli-tv-kd13:26.2.31": "The Sangha has given monk so-and-so a purifying probation for those offenses. ",
-  "pli-tv-kd13:26.2.32": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd13:26.2.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:26.3.1": "“When should purifying probation be given? ",
   "pli-tv-kd13:26.3.2": "Purifying probation should be given when: one doesn’t know the number of offenses, nor the number of days; ",
   "pli-tv-kd13:26.3.3": "one doesn’t remember the number of offenses, nor the number of days; ",
