Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -246,7 +246,7 @@
   "pli-tv-kd14:4.9.29": "After rebuking them … ",
   "pli-tv-kd14:4.9.30": "he gave a teaching and addressed the monks: ",
   "pli-tv-kd14:4.10.1": "“Well then, because of his great clarity of memory, grant resolution through recollection to Dabba the Mallian. ",
-  "pli-tv-kd14:4.10.2": "And it should be granted like this: ",
+  "pli-tv-kd14:4.10.2": "And it should be granted like this. ",
   "pli-tv-kd14:4.10.3": "Dabba should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd14:4.10.4": "‘Venerables, these monks Mettiya and Bhūmajaka are groundlessly charging me with failure in morality. ",
   "pli-tv-kd14:4.10.5": "Because of my great clarity of memory, I ask the Sangha for resolution through recollection. ",
