--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -298,7 +298,7 @@
   "pli-tv-kd14:5.1.25": "After rebuking them … ",
   "pli-tv-kd14:5.1.26": "he gave a teaching and addressed the monks: ",
   "pli-tv-kd14:5.1.27": "“Well then, since he is no longer insane, grant the monk Gagga resolution because of past insanity. ",
-  "pli-tv-kd14:5.2.1": "And it should be granted like this: ",
+  "pli-tv-kd14:5.2.1": "And it should be granted like this. ",
   "pli-tv-kd14:5.2.2": "The monk Gagga should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd14:5.2.3": "‘Venerables, I have been insane and suffering from psychosis. ",
   "pli-tv-kd14:5.2.4": "Because of that, I did and said many things unworthy of a monastic. ",
