--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -37,5 +37,6 @@
   "dhp175:1": "Like swans moving through the air,",
   "dhp175:2": "like mystics moving through the sky,",
   "dhp175:3": "the wise leave this world,",
-  "dhp175:4": "having defeated Māra and his army."
+  "dhp175:4": "having defeated Māra and his army.",
+  "dhp176:1": "There is no evil that cannot be done"
 }
