Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -39,5 +39,6 @@
   "dhp175:3": "the wise leave this world,",
   "dhp175:4": "having defeated Māra and his army.",
   "dhp176:1": "There is no evil that cannot be done",
-  "dhp176:2": "by one who tells lies"
+  "dhp176:2": "by one who tells lies",
+  "dhp176:3": "and disregards"
 }
