Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -40,6 +40,6 @@
   "dhp175:4": "having defeated Māra and his army.",
   "dhp176:1": "There is no evil",
   "dhp176:2": "that cannot be done",
-  "dhp176:3": "and disregards",
+  "dhp176:3": "by one who tells lies",
   "dhp176:4": "the afterlife."
 }
