Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -41,5 +41,5 @@
   "dhp176:1": "There is no evil",
   "dhp176:2": "that cannot be done",
   "dhp176:3": "by one who tells lies",
-  "dhp176:4": "the afterlife."
+  "dhp176:4": "and disregards the afterlife."
 }
