Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -42,6 +42,6 @@
   "dhp176:2": "that cannot be done",
   "dhp176:3": "by one who tells lies",
   "dhp176:4": "and disregards the afterlife.",
-  "dhp177:1": "Stingy people do not go the deva-world,",
+  "dhp177:1": "Stingy fools who do not value giving",
   "dhp177:2": "fools who do not value giving."
 }
