Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -44,5 +44,6 @@
   "dhp176:4": "and disregards the afterlife.",
   "dhp177:1": "Stingy fools who do not value giving",
   "dhp177:2": "do not go the deva-world.",
-  "dhp177:3": "The wise rejoice in giving,"
+  "dhp177:3": "The wise rejoice in giving,",
+  "dhp177:4": "and because of that they are happy hereafter."
 }
