--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -42,7 +42,7 @@
   "dhp176:2": "that cannot be done",
   "dhp176:3": "by one who tells lies",
   "dhp176:4": "and disregards the afterlife.",
-  "dhp177:1": "Stingy fools who do not praise giving",
+  "dhp177:1": "Stingy fools, those who do not praise giving,",
   "dhp177:2": "do not go the deva-world.",
   "dhp177:3": "The wise rejoice in giving,",
   "dhp177:4": "and because of that they are happy hereafter."
