Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -45,5 +45,6 @@
   "dhp177:1": "Stingy fools, those who do not praise giving,",
   "dhp177:2": "do not go the deva-world.",
   "dhp177:3": "The wise rejoice in giving,",
-  "dhp177:4": "and because of that they are happy hereafter."
+  "dhp177:4": "and because of that they are happy hereafter.",
+  "dhp178:1": "Compared to one who is the sole ruler of the earth,"
 }
