Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -46,5 +46,6 @@
   "dhp177:2": "do not go the deva-world.",
   "dhp177:3": "The wise rejoice in giving,",
   "dhp177:4": "and because of that they are happy hereafter.",
-  "dhp178:1": "Compared to one who is the sole ruler of the earth,"
+  "dhp178:1": "Compared to one who is the sole ruler of the earth,",
+  "dhp178:2": "or to one bound for heaven,"
 }
