Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -48,5 +48,6 @@
   "dhp177:4": "and because of that they are happy hereafter.",
   "dhp178:1": "Compared to one who is the sole ruler of the earth,",
   "dhp178:2": "or to one bound for heaven,",
-  "dhp178:3": "or one who controls the entire world -"
+  "dhp178:3": "or one who controls the entire world -",
+  "dhp178:4": "attaining stream-entry is better."
 }
