--- a/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp167-178_translation-en-suddhaso.json
@@ -46,7 +46,7 @@
   "dhp177:2": "do not go the deva-world.",
   "dhp177:3": "The wise rejoice in giving,",
   "dhp177:4": "and because of that they are happy hereafter.",
-  "dhp178:1": "Compared to one who is the sole ruler of the earth,",
+  "dhp178:1": "Compared to being the sole ruler of the earth,",
   "dhp178:2": "or to one bound for heaven,",
   "dhp178:3": "or one who controls the entire world -",
   "dhp178:4": "attaining stream-entry is better."
