--- a/translation/de/sabbamitta/sutta/an/an5/an5.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.74_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "an5.74:1.2": "„Herr, man spricht von ‚jemandem, der mit der Lehre lebt‘. ",
   "an5.74:1.3": "Wie beschreibt man jemanden, der mit der Lehre lebt?“ ",
   "an5.74:2.1": "„Da ist, Mönch, ein Mönch, der sich die Lehren einprägt: ",
-  "an5.74:2.2": "die Aussagen, Lieder, Gespräche, Strophen, inbrünstigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
+  "an5.74:2.2": "die Aussagen, Lieder, Gespräche, Strophen, innigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
   "an5.74:2.3": "Doch er versteht die tiefere Bedeutung nicht. ",
   "an5.74:2.4": "Diesen Mönch nennt man einen, der viel studiert, nicht einen, der mit der Lehre lebt. ",
   "an5.74:3.1": "Dann unterweist da ein Mönch andere ausführlich im Dhamma, wie er ihn gehört und sich eingeprägt hat. Doch er versteht die tiefere Bedeutung nicht. ",
