--- a/translation/de/sabbamitta/sutta/an/an5/an5.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.74_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an5.74:5.1": "Dann denkt da ein Mönch im Herzen über die Lehre nach und erwägt sie, untersucht sie mit dem Geist, wie er sie gehört und sich eingeprägt hat. Doch er versteht die tiefere Bedeutung nicht. ",
   "an5.74:5.2": "Diesen Mönch nennt man einen, der viel nachdenkt, nicht einen, der mit der Lehre lebt. ",
   "an5.74:6.1": "Da ist ein Mönch, der sich die Lehren einprägt: ",
-  "an5.74:6.2": "die Aussagen, Lieder, Gespräche, Strophen, inbrünstigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
+  "an5.74:6.2": "die Aussagen, Lieder, Gespräche, Strophen, innigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
   "an5.74:6.3": "Und er versteht die tiefere Bedeutung. ",
   "an5.74:6.4": "So ist ein Mönch jemand, der mit der Lehre lebt. ",
   "an5.74:7.1": "So habe ich dir also die Person dargelegt, die viel studiert, die, die viel plädiert, die, die viel aufsagt, die, die viel nachdenkt und die, die mit der Lehre lebt. ",
