--- a/translation/de/sabbamitta/sutta/an/an5/an5.73_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.73_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "an5.73:1.2": "„Herr, man spricht von ‚jemandem, der mit der Lehre lebt‘. ",
   "an5.73:1.3": "Wie beschreibt man jemanden, der mit der Lehre lebt?“ ",
   "an5.73:2.1": "„Da ist, Mönch, ein Mönch, der sich die Lehren einprägt: ",
-  "an5.73:2.2": "die Aussagen, Lieder, Gespräche, Strophen, inbrünstigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
+  "an5.73:2.2": "die Aussagen, Lieder, Gespräche, Strophen, innigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
   "an5.73:2.3": "Er verbringt seine Tage damit, diese Lehre zu studieren. Doch er vernachlässigt die Klausur und weiht sich nicht der inneren Sammlung des Herzens. ",
   "an5.73:2.4": "Diesen Mönch nennt man einen, der viel studiert, nicht einen, der mit der Lehre lebt. ",
   "an5.73:3.1": "Dann unterweist da eine Nonne andere ausführlich im Dhamma, wie sie ihn gehört und sich eingeprägt hat. ",
