Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.73_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.73_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.73_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an5.73:5.2": "Sie verbringt ihre Tage damit, über diese Lehre nachzudenken. Doch sie vernachlässigt die Klausur und weiht sich nicht der inneren Sammlung des Herzens. ",
   "an5.73:5.3": "Diese Nonne nennt man eine, die viel nachdenkt, nicht eine, die mit der Lehre lebt. ",
   "an5.73:6.1": "Da ist ein Mönch, der sich die Lehren einprägt: ",
-  "an5.73:6.2": "die Aussagen, Lieder, Gespräche, Strophen, inbrünstigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
+  "an5.73:6.2": "die Aussagen, Lieder, Gespräche, Strophen, innigen Ausrufe, Legenden, Geschichten aus früheren Leben, erstaunlichen Geschichten und Einteilungen. ",
   "an5.73:6.3": "Er verbringt seine Tage nicht damit, diese Lehre zu studieren. Er vernachlässigt die Klausur nicht und weiht sich der inneren Sammlung des Herzens. ",
   "an5.73:6.4": "So ist ein Mönch jemand, der mit der Lehre lebt. ",
   "an5.73:7.1": "So habe ich dir also die Person dargelegt, die viel studiert, die, die viel plädiert, die, die viel aufsagt, die, die viel nachdenkt und die, die mit der Lehre lebt. ",
