--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -826,9 +826,9 @@
   "pli-tv-kd13:22.1.3": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.1.4": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
   "pli-tv-kd13:22.1.5": "He asked ",
-  "pli-tv-kd13:22.1.6": "and the Sangha gave him that probation. ",
-  "pli-tv-kd13:22.1.7": "While on probation, he was conscience-stricken. ",
-  "pli-tv-kd13:22.1.8": "He considered what he had done, ",
+  "pli-tv-kd13:22.1.6": "and got it. ",
+  "pli-tv-kd13:22.1.7": "While on probation, he was overcome with guilt. ",
+  "pli-tv-kd13:22.1.8": "He considered what he had done ",
   "pli-tv-kd13:22.1.15": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
   "pli-tv-kd13:22.2.1": "He told the monks everything that had happened, ",
   "pli-tv-kd13:22.2.17": "adding, “What should I do now?” ",
