--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -829,7 +829,7 @@
   "pli-tv-kd13:22.1.6": "and got it. ",
   "pli-tv-kd13:22.1.7": "While on probation, he was overcome with guilt. ",
   "pli-tv-kd13:22.1.8": "He considered what he had done ",
-  "pli-tv-kd13:22.1.15": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
+  "pli-tv-kd13:22.1.15": "and thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
   "pli-tv-kd13:22.2.1": "He told the monks everything that had happened, ",
   "pli-tv-kd13:22.2.17": "adding, “What should I do now?” ",
   "pli-tv-kd13:22.2.18": "They told the Buddha. ",
