Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -840,8 +840,8 @@
   "pli-tv-kd13:22.3.5": "I thought, ",
   "pli-tv-kd13:22.3.6": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.3.7": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
-  "pli-tv-kd13:22.3.8": "I did, ",
-  "pli-tv-kd13:22.3.9": "and the Sangha gave me that probation. ",
+  "pli-tv-kd13:22.3.8": "I asked ",
+  "pli-tv-kd13:22.3.9": "and got it. ",
   "pli-tv-kd13:22.3.10": "While on probation, I was conscience-stricken. ",
   "pli-tv-kd13:22.3.11": "I considered what I had done, ",
   "pli-tv-kd13:22.3.18": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
