--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -857,7 +857,7 @@
   "pli-tv-kd13:22.4.7": "He asked ",
   "pli-tv-kd13:22.4.8": "and got it. ",
   "pli-tv-kd13:22.4.9": "While on probation, he was overcome with guilt. ",
-  "pli-tv-kd13:22.4.10": "He considered what he had done, ",
+  "pli-tv-kd13:22.4.10": "He considered what he had done ",
   "pli-tv-kd13:22.4.17": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
   "pli-tv-kd13:22.4.18": "He’s now asking the Sangha for probation for two months for that other offense. ",
   "pli-tv-kd13:22.4.19": "If it seems appropriate to the Sangha, the Sangha should give him probation for two months for that other offense. ",
