Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -867,8 +867,8 @@
   "pli-tv-kd13:22.4.23": "He thought, ",
   "pli-tv-kd13:22.4.24": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.4.25": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
-  "pli-tv-kd13:22.4.26": "He did, ",
-  "pli-tv-kd13:22.4.27": "and the Sangha gave him that probation. ",
+  "pli-tv-kd13:22.4.26": "He asked ",
+  "pli-tv-kd13:22.4.27": "and got it. ",
   "pli-tv-kd13:22.4.28": "While  on probation, he was conscience-stricken. ",
   "pli-tv-kd13:22.4.29": "He considered what he had done, ",
   "pli-tv-kd13:22.4.36": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
