--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -871,9 +871,9 @@
   "pli-tv-kd13:22.4.27": "and got it. ",
   "pli-tv-kd13:22.4.28": "While  on probation, he was overcome with guilt. ",
   "pli-tv-kd13:22.4.29": "He considered what he had done ",
-  "pli-tv-kd13:22.4.36": "and then thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
+  "pli-tv-kd13:22.4.36": "and thought, “Let me ask the Sangha for probation for two months for the other offense too.” ",
   "pli-tv-kd13:22.4.37": "He’s now asking the Sangha for probation for two months for that other offense. ",
-  "pli-tv-kd13:22.4.38": "The Sangha gives him probation for two months for that other offense. ",
+  "pli-tv-kd13:22.4.38": "The Sangha gives him that probation. ",
   "pli-tv-kd13:22.4.39": "Any monk who approves of giving him probation for two months for that other offense should remain silent. ",
   "pli-tv-kd13:22.4.40": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:22.4.41": "For the second time I speak on this matter. … ",
