Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -891,11 +891,11 @@
   "pli-tv-kd13:23.1.7": "While on probation, he’s overcome with guilt. ",
   "pli-tv-kd13:23.1.8": "He considers all this ",
   "pli-tv-kd13:23.1.15": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
-  "pli-tv-kd13:23.1.16": "He then asks the Sangha, ",
-  "pli-tv-kd13:23.1.17": "and the Sangha gives him probation for two months for the other offense too. ",
+  "pli-tv-kd13:23.1.16": "He asks ",
+  "pli-tv-kd13:23.1.17": "and gets it. ",
   "pli-tv-kd13:23.1.18": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.2.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.2.2": "He knows about one offense, but not about the other. ",
+  "pli-tv-kd13:23.2.2": "He’s aware of one, but not the other. ",
   "pli-tv-kd13:23.2.3": "He asks the Sangha for probation for two months for the offense he knows about, ",
   "pli-tv-kd13:23.2.4": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:23.2.5": "While on probation, he finds out about the other offense. ",
