Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -896,8 +896,8 @@
   "pli-tv-kd13:23.1.18": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.2.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:23.2.2": "He’s aware of one, but not the other. ",
-  "pli-tv-kd13:23.2.3": "He asks the Sangha for probation for two months for the offense he knows about, ",
-  "pli-tv-kd13:23.2.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.2.3": "He asks the Sangha for probation for two months for the offense he’s aware of, ",
+  "pli-tv-kd13:23.2.4": "which he gets. ",
   "pli-tv-kd13:23.2.5": "While on probation, he finds out about the other offense. ",
   "pli-tv-kd13:23.2.6": "He considers all this ",
   "pli-tv-kd13:23.2.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
