--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -901,7 +901,7 @@
   "pli-tv-kd13:23.2.5": "While on probation, he finds out about the other offense. ",
   "pli-tv-kd13:23.2.6": "He considers all this ",
   "pli-tv-kd13:23.2.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
-  "pli-tv-kd13:23.2.13": "He then asks the Sangha, ",
+  "pli-tv-kd13:23.2.13": "He asks ",
   "pli-tv-kd13:23.2.14": "and the Sangha gives him probation for two months for the other offense too. ",
   "pli-tv-kd13:23.2.15": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.3.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
