--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -905,7 +905,7 @@
   "pli-tv-kd13:23.2.14": "and gets it. ",
   "pli-tv-kd13:23.2.15": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.3.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.3.2": "He remembers one offense, but not the other. ",
+  "pli-tv-kd13:23.3.2": "He remembers one, but not the other. ",
   "pli-tv-kd13:23.3.3": "He asks the Sangha for probation for two months for the offense he remembers, ",
   "pli-tv-kd13:23.3.4": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:23.3.5": "While on probation, he remembers the other offense. ",
