Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -907,7 +907,7 @@
   "pli-tv-kd13:23.3.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:23.3.2": "He remembers one, but not the other. ",
   "pli-tv-kd13:23.3.3": "He asks the Sangha for probation for two months for the offense he remembers, ",
-  "pli-tv-kd13:23.3.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.3.4": "which he gets. ",
   "pli-tv-kd13:23.3.5": "While on probation, he remembers the other offense. ",
   "pli-tv-kd13:23.3.6": "He considers all this ",
   "pli-tv-kd13:23.3.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
