Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -911,13 +911,13 @@
   "pli-tv-kd13:23.3.5": "While on probation, he remembers the other offense. ",
   "pli-tv-kd13:23.3.6": "He considers all this ",
   "pli-tv-kd13:23.3.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
-  "pli-tv-kd13:23.3.13": "He then asks the Sangha, ",
-  "pli-tv-kd13:23.3.14": "and the Sangha gives him probation for two months for the other offense too. ",
+  "pli-tv-kd13:23.3.13": "He asks ",
+  "pli-tv-kd13:23.3.14": "and gets it. ",
   "pli-tv-kd13:23.3.15": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.4.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.4.2": "He’s sure of one offense, but unsure of the other. ",
+  "pli-tv-kd13:23.4.2": "He’s sure of one, but unsure of the other. ",
   "pli-tv-kd13:23.4.3": "He asks the Sangha for probation for two months for the offense he’s sure of, ",
-  "pli-tv-kd13:23.4.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.4.4": "which he gets. ",
   "pli-tv-kd13:23.4.5": "While on probation, he becomes sure of the other offense too. ",
   "pli-tv-kd13:23.4.6": "He considers all this ",
   "pli-tv-kd13:23.4.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
