--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -922,12 +922,12 @@
   "pli-tv-kd13:23.4.6": "He considers all this ",
   "pli-tv-kd13:23.4.12": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
   "pli-tv-kd13:23.4.13": "He asks ",
-  "pli-tv-kd13:23.4.14": "and the Sangha gives him probation for two months for the other offense too. ",
+  "pli-tv-kd13:23.4.14": "and gets it. ",
   "pli-tv-kd13:23.4.15": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.5.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.5.2": "He knows he has concealed one offense, but doesn’t know he has concealed the other. ",
+  "pli-tv-kd13:23.5.2": "He’s aware he has concealed one offense, but not the other. ",
   "pli-tv-kd13:23.5.3": "He asks the Sangha for probation for two months for both offenses, ",
-  "pli-tv-kd13:23.5.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.5.4": "which he gets. ",
   "pli-tv-kd13:23.5.5": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:23.5.6": "He says, ",
   "pli-tv-kd13:23.5.7": "‘What has this monk committed? ",
