Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -934,7 +934,7 @@
   "pli-tv-kd13:23.5.8": "Why is he on probation?’ ",
   "pli-tv-kd13:23.5.9": "They tell him everything, ",
   "pli-tv-kd13:23.5.15": "and he says, ",
-  "pli-tv-kd13:23.5.16": "‘The giving of probation for the offense he knows he has concealed is legitimate, ",
+  "pli-tv-kd13:23.5.16": "‘The giving of probation for the offense he’s aware of having concealed is legitimate, ",
   "pli-tv-kd13:23.5.17": "legal, and has effect. ",
   "pli-tv-kd13:23.5.18": "The giving of probation for the offense he doesn’t know he has concealed is illegitimate, ",
   "pli-tv-kd13:23.5.19": "illegal, and has no effect. ",
