--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -936,7 +936,7 @@
   "pli-tv-kd13:23.5.15": "and he says, ",
   "pli-tv-kd13:23.5.16": "‘The giving of probation for the offense he’s aware of having concealed is legitimate, ",
   "pli-tv-kd13:23.5.17": "legal, and has effect. ",
-  "pli-tv-kd13:23.5.18": "The giving of probation for the offense he doesn’t know he has concealed is illegitimate, ",
+  "pli-tv-kd13:23.5.18": "The giving of probation for the offense he’s not aware of having concealed is illegitimate, ",
   "pli-tv-kd13:23.5.19": "illegal, and has no effect. ",
   "pli-tv-kd13:23.5.20": "For one offense he only deserves the trial period.’ ",
   "pli-tv-kd13:23.6.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
