--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -940,9 +940,9 @@
   "pli-tv-kd13:23.5.19": "illegal, and has no effect. ",
   "pli-tv-kd13:23.5.20": "For one offense he only deserves the trial period.’ ",
   "pli-tv-kd13:23.6.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.6.2": "He remembers he has concealed one offense, but doesn’t remember he has concealed the other. ",
+  "pli-tv-kd13:23.6.2": "He remembers concealing one, but not the other. ",
   "pli-tv-kd13:23.6.3": "He asks the Sangha for probation for two months for both offenses, ",
-  "pli-tv-kd13:23.6.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.6.4": "which he gets. ",
   "pli-tv-kd13:23.6.5": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:23.6.6": "He says, ",
   "pli-tv-kd13:23.6.7": "‘What has this monk committed? ",
