Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -949,7 +949,7 @@
   "pli-tv-kd13:23.6.8": "Why is he on probation?’ ",
   "pli-tv-kd13:23.6.9": "They tell him everything, ",
   "pli-tv-kd13:23.6.16": "and he says, ",
-  "pli-tv-kd13:23.6.17": "‘The giving of probation for the offense he remembers he has concealed is legitimate, ",
+  "pli-tv-kd13:23.6.17": "‘The giving of probation for the offense he remembers concealing is legitimate, ",
   "pli-tv-kd13:23.6.18": "legal, and has effect. ",
   "pli-tv-kd13:23.6.19": "The giving of probation for the offense he doesn’t remember he has concealed is illegitimate, ",
   "pli-tv-kd13:23.6.20": "illegal, and has no effect. ",
