--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -951,7 +951,7 @@
   "pli-tv-kd13:23.6.16": "and he says, ",
   "pli-tv-kd13:23.6.17": "‘The giving of probation for the offense he remembers concealing is legitimate, ",
   "pli-tv-kd13:23.6.18": "legal, and has effect. ",
-  "pli-tv-kd13:23.6.19": "The giving of probation for the offense he doesn’t remember he has concealed is illegitimate, ",
+  "pli-tv-kd13:23.6.19": "The giving of probation for the offense he doesn’t remember concealing is illegitimate, ",
   "pli-tv-kd13:23.6.20": "illegal, and has no effect. ",
   "pli-tv-kd13:23.6.21": "For one offense he only deserves the trial period.’ ",
   "pli-tv-kd13:23.6.22": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
