--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -955,7 +955,7 @@
   "pli-tv-kd13:23.6.20": "illegal, and has no effect. ",
   "pli-tv-kd13:23.6.21": "For one offense he only deserves the trial period.’ ",
   "pli-tv-kd13:23.6.22": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.6.23": "He’s sure he has concealed one offense, but unsure if he has concealed the other. ",
+  "pli-tv-kd13:23.6.23": "He’s sure of having concealed one, but unsure of the other. ",
   "pli-tv-kd13:23.6.24": "He asks the Sangha for probation for two months for both offenses, ",
   "pli-tv-kd13:23.6.25": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:23.6.26": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
