--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -957,7 +957,7 @@
   "pli-tv-kd13:23.6.22": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:23.6.23": "He’s sure of having concealed one, but unsure of the other. ",
   "pli-tv-kd13:23.6.24": "He asks the Sangha for probation for two months for both offenses, ",
-  "pli-tv-kd13:23.6.25": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:23.6.25": "which he gets. ",
   "pli-tv-kd13:23.6.26": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:23.6.27": "He says, ",
   "pli-tv-kd13:23.6.28": "‘What has this monk committed? ",
