Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -964,7 +964,7 @@
   "pli-tv-kd13:23.6.29": "Why is he on probation?’ ",
   "pli-tv-kd13:23.6.30": "They tell him everything, ",
   "pli-tv-kd13:23.6.37": "and he says, ",
-  "pli-tv-kd13:23.6.38": "‘The giving of probation for the offense he’s sure he has concealed is legitimate, ",
+  "pli-tv-kd13:23.6.38": "‘The giving of probation for the offense he’s sure of having concealed is legitimate, ",
   "pli-tv-kd13:23.6.39": "legal, and has effect. ",
   "pli-tv-kd13:23.6.40": "The giving of probation for the offense he’s unsure if he has concealed is illegitimate, ",
   "pli-tv-kd13:23.6.41": "illegal, and has no effect. ",
