--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -973,8 +973,8 @@
   "pli-tv-kd13:24.1.2": "He thought, ",
   "pli-tv-kd13:24.1.3": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.1.4": "Let me ask the Sangha for probation for one month for those offenses.’ ",
-  "pli-tv-kd13:24.1.5": "He did, ",
-  "pli-tv-kd13:24.1.6": "and the Sangha gave him that probation. ",
+  "pli-tv-kd13:24.1.5": "He asked ",
+  "pli-tv-kd13:24.1.6": "and got it. ",
   "pli-tv-kd13:24.1.7": "While on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.1.8": "He considered all this, ",
   "pli-tv-kd13:24.1.15": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
